# TimeTracker-Linux

./: .gitignore  .gitmodules  CHANGES  CONTRIBUTING.md  ChangeLog  INSTALL  LICENSE  MAINTAINERS  Makefile  Makefile.am  Makefile.in  README  README.md  TESTED.txt  THANKS  VERSION  aclocal.m4  application.py  config.status  configure  configure.ac  distutils.cfg  requirements.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Config.py  Makefile  Makefile.am  Makefile.in  PathConfig.py  TimeTrackerApplet.server  TimeTrackerApplet.server.in  TimeTrackerApplet.server.in.in  TimeTrackerApplet.xml  __init__.py  timetracker-applet.glade  timetracker-applet.schemas  timetracker-applet.schemas.in
data/ui/: timetracker.ui
images/: Makefile  Makefile.am  Makefile.in
libs/: Harvest.py  Helpers.py  Logic.py  Notifier.py  O.py  Signals.py  StatusButton.py  UI.py  __init__.py  gtkwin32.py  harvest.py
po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  bn.gmo  bn.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_AU.gmo  en_AU.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  eu.gmo  eu.po  fa.gmo  fa.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  he.gmo  (+37 more)
src/: Makefile  Makefile.am  Makefile.in  timetracker-applet
src/timetrackerapplet/: Makefile  Makefile.am  Makefile.in  config.py  defs.py  logger.py  utils.py
src/timetrackerapplet/controllers/: GlobalController.py  Makefile  Makefile.am  Makefile.in  TimeTrackerApplet.py  TimeTrackerManagerService.py  TimeTrackerService.py  __init__.py
src/timetrackerapplet/core/: AppletGConfWrapper.py  Makefile  Makefile.am  Makefile.in  PresetsStore.py  TimeTracker.py  __init__.py
src/timetrackerapplet/ui/: ContinueTimeTrackerDialog.py  DurationChooser.py  Makefile  Makefile.am  Makefile.in  Notifier.py  StartTimerDialog.py  __init__.py
