moduledir = $(pythondir)/timerapplet/ui
module_PYTHON = \
	__init__.py \
	AddEditPresetDialog.py \
	ContinueTimerDialog.py \
	DurationChooser.py \
	ManagePresetsDialog.py \
	Notifier.py \
	PieMeter.py \
	PreferencesDialog.py \
	PulseButton.py \
	ScrollableButtonList.py \
	StartTimerDialog.py \
	StatusButton.py
